# catala-book

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  book.toml  catala-setup.md  foo.catala_en  fr-banner.js  playground-button.js  treesitter.js
examples/: Makefile  exercice-2-1-1.catala_fr  exercise-2-1-1.catala_en  tutorial_end_2_3.catala_en  tutorial_end_2_4.catala_en  tutorial_start_2_1.catala_en  tutoriel_debut_2_1.catala_fr  tutoriel_fin_2_1.catala_fr  tutoriel_fin_2_2.catala_fr  tutoriel_fin_2_3.catala_fr  tutoriel_fin_2_4.catala_fr
playground/: .gitignore  Makefile  README.md  biome.json  exercises.json  index.html  learn.html  package-lock.json  package.json
scripts/: README.md  check_struct_consistency.py  integrate-playground.sh  translate_catala.py  translation_glossary.txt
src/: 0-intro.md  1-0-getting_started.md  1-1-0-installing.md  1-1-1-linux-mac-wsl.md  1-1-2-windows.md  1-1-installing.md  1-2-first.md  2-0-tutorial.md  2-1-1-exercise.md  2-1-basic-blocks.md  2-2-conditionals-exceptions.md  2-3-list-modular.md  2-3-list-scopes.md  2-3-modular.md  2-4-1-exercise.md  2-4-states-dynamic.md  2-tutorial.md  3-1-directory-config.md  3-2-compilation-deployment.md  3-2-test-ci.md  3-3-compilation-deployment.md  3-3-test-ci.md  3-4-external-plugins.md  3-5-lawyers-agile.md  3-project.md  4-0-howto.md  4-1-design.md  4-1-general.md  4-2-catala-specific.md  4-2-collaborating.md  4-howto.md  5-1-literate-programming.md  5-2-types.md  5-3-scopes-toplevel.md  5-4-definitions-exceptions.md  5-5-expressions.md  5-6-modules.md  5-7-1-attributes.md  (+16 more)
(+117 files in other folders)
